2006-04-05  Anthony Balkissoon  <abalkiss@redhat.com>

	* README: Added line about compiling the Harness, RunnerProcess, and
	tests.

2006-04-05  Anthony Balkissoon  <abalkiss@redhat.com>

	* Harness.java: New file.
	* README: New file (old one moved to README.OldHarness).
	* README.OldHarness: New file, copied from the old README.
	* RunnerProcess.java: New file.
	* harness: New file.

2006-04-05  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/net/URLConnection/getFileNameMap.java: New file.

2006-04-05  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/reflect/InvocationTargetException/Chain.java:
	New file.

2006-04-05  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/testlet/java/util/Iterator/ConcurrentModification.java: New test.

2006-04-03  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/javax/imageio/plugins/jpeg/TestJPEGImageWriteParam.java:
	New test.

2006-04-03  Tom Tromey  <tromey@redhat.com>

	PR classpath/26971:
	* gnu/testlet/javax/naming/directory/BasicAttribute/Enumerate.java:
	New file.

2006-04-03  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/javax/imageio/plugins/jpeg/TestJPEGHuffmanTable.java:
	Reformat.  Optimize imports.
	* gnu/testlet/javax/imageio/plugins/jpeg/TestJPEGImageReadParam.java:
	New test.
	* gnu/testlet/javax/imageio/plugins/jpeg/TestJPEGQTable.java:
	Optimize imports.

2006-03-31  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/Component/keyPressTest.java: 
	New test.

2006-03-30  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/javax/imageio/plugins/jpeg/TestJPEGQTable.java: New
	test.

2006-03-29  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/Panel/TestPanelRepaint.java
	(test): Added check.
	(myPanel): Added component listener.

2006-03-29  Robert Schuster  <robertschuster@fsfe.org>

	* gnu/testlet/javax/swing/text/GapContent/insertString.java:
	(testGeneral): Let test fail when unexpected exception occurs.
	(testSpecialInsert): New test.
