@@ -1,3 +1,8 @@
+2006-04-06  Mark Wielaard  <mark@klomp.org>
+
+	* gnu/testlet/java/lang/Class/security.java: Add check for no
+	permissions when calling getClassLoader() on bootstrap class.
+
 2006-04-05  Anthony Balkissoon  <abalkiss@redhat.com>
 
 	* README: Added line about compiling the Harness, RunnerProcess, and
